# variant_view

./: .cmake-format  CMakeLists.txt  LICENSE  README.md  test.cpp
.github/workflows/: run_test.yml
include/yk/: variant.hpp  variant_view.hpp
include/yk/util/: forward_like.hpp  pack_indexing.hpp  specialization_of.hpp
include/yk/variant/: boost.hpp  std.hpp  traits.hpp  variant.hpp
include/yk/variant/boost/: compare.hpp
include/yk/variant_view/: boost.hpp  get.hpp  hash.hpp  std.hpp  stl.hpp  traits.hpp  variant_view.hpp
include/yk/variant_view/detail/: variant_view_traits.hpp
include/yk/variant_view/hash/: boost_hash.hpp  std_hash.hpp  stl_hash.hpp
test/: CMakeLists.txt  test.cpp
tests/: CMakeLists.txt  test.cpp
