cmake_minimum_required(VERSION 3.23)

include(CTest)
if (BUILD_TESTING)
  find_package(Boost REQUIRED COMPONENTS unit_test_framework CONFIG)
  add_executable(variant_view_test test.cpp)
  target_compile_features(variant_view_test PUBLIC cxx_std_20)
  target_link_libraries(variant_view_test PUBLIC variant_view Boost::unit_test_framework)
  add_test(NAME variant_view_test COMMAND variant_view_test)
endif()
